<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/publisher_options">
        <EditTextPreference
            app:key="PUBLISHER_USERNAME"
            app:title="@string/PUBLISHER_USERNAME"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="user1"/>

        <EditTextPreference
            app:key="INITIAL_PUBLISHER_IP"
            app:title="@string/INITIAL_PUBLISHER_IP"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="unknown"/>

        <EditTextPreference
            app:key="INITIAL_PUBLISHER_PORT"
            app:title="@string/INITIAL_PUBLISHER_PORT"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="20313"/>
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/broker_options">

        <EditTextPreference
            app:key="INITIAL_BROKER_IP"
            app:title="@string/INITIAL_BROKER_IP"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="192.168.2.17"/>

        <EditTextPreference
            app:key="INITIAL_BROKER_PORT"
            app:title="@string/INITIAL_BROKER_PORT"
            app:useSimpleSummaryProvider="true"
            app:defaultValue="14321"/>
    </PreferenceCategory>



<!--    <PreferenceCategory app:title="@string/messages_header">-->

<!--        <EditTextPreference-->
<!--            app:key="signature"-->
<!--            app:title="@string/signature_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--        <ListPreference-->
<!--            app:defaultValue="reply"-->
<!--            app:entries="@array/reply_entries"-->
<!--            app:entryValues="@array/reply_values"-->
<!--            app:key="reply"-->
<!--            app:title="@string/reply_title"-->
<!--            app:useSimpleSummaryProvider="true" />-->

<!--    </PreferenceCategory>-->

<!--    <PreferenceCategory app:title="@string/sync_header">-->

<!--        <SwitchPreferenceCompat-->
<!--            app:key="sync"-->
<!--            app:title="@string/sync_title" />-->

<!--        <SwitchPreferenceCompat-->
<!--            app:dependency="sync"-->
<!--            app:key="attachment"-->
<!--            app:summaryOff="@string/attachment_summary_off"-->
<!--            app:summaryOn="@string/attachment_summary_on"-->
<!--            app:title="@string/attachment_title" />-->

<!--    </PreferenceCategory>-->

</PreferenceScreen>