<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <Button
        android:id="@+id/button_get_tags"
        android:layout_width="152dp"
        android:layout_height="42dp"
        android:text="@string/tags"
        app:layout_constraintEnd_toEndOf="@+id/textview_first2"
        app:layout_constraintTop_toTopOf="@+id/button_get_channels" />

    <Button
        android:id="@+id/buttonPlay"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:icon="@android:drawable/ic_media_play"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/buttonSave" />

    <TextView
        android:id="@+id/textview_first2"
        android:layout_width="327dp"
        android:layout_height="50dp"
        android:layout_marginTop="60dp"
        android:text="@string/subscriber_title"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/textView11"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/bytes"
        app:layout_constraintStart_toStartOf="@+id/videoSpinner"
        app:layout_constraintTop_toBottomOf="@+id/textView10" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="102dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="32dp"
        android:text="@string/channel_videos"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView8" />

    <Button
        android:id="@+id/button_get_channels"
        android:layout_width="152dp"
        android:layout_height="42dp"
        android:layout_marginTop="32dp"
        android:text="@string/channels"
        app:layout_constraintStart_toStartOf="@+id/textview_first2"
        app:layout_constraintTop_toBottomOf="@+id/textview_first2" />

    <Spinner
        android:id="@+id/topicSpinner"
        android:layout_width="209dp"
        android:layout_height="32dp"
        app:layout_constraintStart_toEndOf="@+id/textView8"
        app:layout_constraintTop_toTopOf="@+id/textView8" />

    <TextView
        android:id="@+id/textView8"
        android:layout_width="102dp"
        android:layout_height="29dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="16dp"
        android:text="@string/topics"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_get_channels" />

    <Spinner
        android:id="@+id/videoSpinner"
        android:layout_width="0dp"
        android:layout_height="44dp"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/button_get_tags"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/button_get_channels"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/name"
        app:layout_constraintStart_toStartOf="@+id/videoSpinner"
        app:layout_constraintTop_toBottomOf="@+id/videoSpinner" />

    <TextView
        android:id="@+id/textViewVideoName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        app:layout_constraintEnd_toEndOf="@+id/topicSpinner"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="@+id/textView10" />

    <TextView
        android:id="@+id/textViewVideoSize"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textViewVideoName"
        app:layout_constraintStart_toStartOf="@+id/textViewVideoName"
        app:layout_constraintTop_toTopOf="@+id/textView11" />

    <TextView
        android:id="@+id/textViewVideoDuration"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textViewVideoName"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/textViewVideoName"
        app:layout_constraintTop_toTopOf="@+id/textView7" />

    <Button
        android:id="@+id/buttonSave"
        style="@style/Widget.AppCompat.Button.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="16dp"
        android:visibility="invisible"
        app:icon="@android:drawable/ic_menu_save"
        app:iconPadding="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/textView7"
        android:layout_width="61dp"
        android:layout_height="23dp"
        android:layout_marginTop="24dp"
        android:text="@string/duration"
        app:layout_constraintStart_toStartOf="@+id/videoSpinner"
        app:layout_constraintTop_toBottomOf="@+id/textView11" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="55dp"
        android:layout_height="35dp"
        android:layout_marginTop="24dp"
        android:text="@string/frame_rate"
        app:layout_constraintStart_toStartOf="@+id/videoSpinner"
        app:layout_constraintTop_toBottomOf="@+id/textView7" />

    <TextView
        android:id="@+id/textViewVideoFrameRate"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textViewVideoName"
        app:layout_constraintStart_toStartOf="@+id/textViewVideoName"
        app:layout_constraintTop_toTopOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView16"
        android:layout_width="54dp"
        android:layout_height="26dp"
        android:layout_marginTop="24dp"
        android:text="Date:"
        app:layout_constraintStart_toStartOf="@+id/videoSpinner"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textViewVideoDateCreated"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="@+id/textViewVideoName"
        app:layout_constraintStart_toStartOf="@+id/textViewVideoName"
        app:layout_constraintTop_toTopOf="@+id/textView16" />


    <TextView
        android:id="@+id/textview_second"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_previous"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="52dp"
        android:layout_marginBottom="16dp"
        android:text="@string/previous"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>